# tf_world

./: .gitignore  LICENSE.txt  README.md
include/tflite_1_14/: VERSION.txt
style_transfer/: settings.gradle
style_transfer/app/: build.gradle
style_transfer/app/src/androidTest/java/org/infil00p/nationalparkstyle/: ExampleInstrumentedTest.java
style_transfer/app/src/main/: AndroidManifest.xml
style_transfer/app/src/main/assets/: README.md
style_transfer/app/src/main/assets/styleTransfer/: output.xml  pre_process_test.py
style_transfer/app/src/main/cpp/: CMakeLists.txt  StyleTransfer.cpp  StyleTransfer.h  native-lib.cpp
style_transfer/app/src/main/java/org/infil00p/nationalparkstyle/: AssetHandler.java  MainActivity.java  StylePicker.java
style_transfer/app/src/main/res/layout/: activity_main.xml  activity_style_picker.xml
style_transfer/app/src/main/res/values/: strings.xml
style_transfer/app/src/test/java/org/infil00p/nationalparkstyle/: ExampleUnitTest.java
style_transfer/gradle/wrapper/: gradle-wrapper.properties
